--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
         <script src="jquery-3.3.1.min.js"></script>
     </head>
     <body>
+            <div class="loader">
+                 <div class="loader_inner"></div>
+            </div>
         <div class="header"><p class="headerCaption">Choose a fighter</p></div>
         <div id="mainBlock" class="main">
             <ul id="list" class="list">
             </ul>
         </div>
-        <input type="submit" id="submitButton" onclick="showID()" class="submitButton" value="Submit"></input>
+        <a id="submitButton" onclick="showID()" class="submitButton" >Submit</a>
         <script type="text/javascript" src="script.js"></script>
     </body>
 </html>
